fix(buttons-group): fix z-index range

--- a/src/components/_buttons-group.scss
+++ b/src/components/_buttons-group.scss
@@ -21,6 +21,7 @@
     display: inline-block;
     font-weight: 400;
     margin-right: -1px;
+    z-index: 1;
 
     &:first-child {
       border-bottom-left-radius: sb-px2rems($sb-radius);
@@ -36,7 +37,7 @@
     &:hover {
       background-color: $sb-color-white;
       border-color: $sb-color-dark-3;
-      z-index: 2;
+      z-index: 3;
     }
 
     &--active,
@@ -44,7 +45,7 @@
     &:focus {
       border-color: $sb-color-blue-2;
       color: $sb-color-blue-2;
-      z-index: 1;
+      z-index: 2;
     }
 
     &.#{$ns}btn--active::before {
@@ -60,7 +61,7 @@
     &[disabled]:hover {
       border-color: $sb-color-light-3;
       color: $sb-color-light-3;
-      z-index: -1;
+      z-index: 0;
     }
   }
 }
